overall uiterlijk verbeterd

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightblue;
+  padding : 25px
 }
 img {
   border: 2px solid black;
@@ -10,4 +11,7 @@ img {
 p2 {
     font-weight: 900;
     font-size: 200%;
+}
+p {
+    padding-left : 25px
 }
